# ffmpeg_oc_plugins

./: CMakeLists.txt  README.md  test_plugins.py
include/: quink_oc_plugin.h
src/: CMakeLists.txt  avgframes_plugin.cpp  blend_plugin.cpp  blur_plugin.cpp  split_plugin.cpp
